--- a/Pelina Beer App/Base.lproj/Main.storyboard
+++ b/Pelina Beer App/Base.lproj/Main.storyboard
@@ -35,14 +35,15 @@
                                             <rect key="frame" x="0.0" y="0.0" width="130" height="160"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
-                                                <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="Qf6-2m-6D3">
+                                                <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="Qf6-2m-6D3">
                                                     <rect key="frame" x="3" y="3" width="124" height="154"/>
                                                 </imageView>
-                                                <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="qtr-z9-Wd7">
-                                                    <rect key="frame" x="75" y="105" width="50" height="50"/>
+                                                <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="favoriteIcon" translatesAutoresizingMaskIntoConstraints="NO" id="qtr-z9-Wd7">
+                                                    <rect key="frame" x="95" y="125" width="30" height="30"/>
+                                                    <color key="tintColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                     <constraints>
-                                                        <constraint firstAttribute="height" constant="50" id="WH8-94-iTW"/>
-                                                        <constraint firstAttribute="width" constant="50" id="tWz-HW-GOb"/>
+                                                        <constraint firstAttribute="height" constant="30" id="WH8-94-iTW"/>
+                                                        <constraint firstAttribute="width" constant="30" id="tWz-HW-GOb"/>
                                                     </constraints>
                                                 </imageView>
                                             </subviews>
@@ -189,4 +190,7 @@
             <point key="canvasLocation" x="137" y="860"/>
         </scene>
     </scenes>
+    <resources>
+        <image name="favoriteIcon" width="48" height="48"/>
+    </resources>
 </document>
